fixed clipping issue on moblie

--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ a {
 
 @media only screen and (max-width: 400px) {
     body {
+        padding-top: 7vh;
         overflow: scroll;
     }
 
